src/codegen/tests/snapshots/rusty__codegen__tests__directaccess_test__byteaccess_assignment.snap
---
source: src/codegen/tests/directaccess_test.rs
expression: prog
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

define signext i16 @main() {
entry:
  %main = alloca i16, align [filtered]
  %b = alloca i16, align [filtered]
  store i16 0, ptr %b, align [filtered]
  store i16 0, ptr %main, align [filtered]
  %0 = load i16, ptr %b, align [filtered]
  %erase = and i16 %0, -256
  %or = or i16 %erase, 2
  store i16 %or, ptr %b, align [filtered]
  %main_ret = load i16, ptr %main, align [filtered]
  ret i16 %main_ret
}
