src/codegen/tests/snapshots/rusty__codegen__tests__directaccess_test__dwordaccess_assignment.snap
---
source: src/codegen/tests/directaccess_test.rs
expression: prog
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

define signext i16 @main() {
entry:
  %main = alloca i16, align [filtered]
  %d = alloca i64, align [filtered]
  store i64 0, ptr %d, align [filtered]
  store i16 0, ptr %main, align [filtered]
  %0 = load i64, ptr %d, align [filtered]
  %erase = and i64 %0, -4294967296
  %or = or i64 %erase, 11259375
  store i64 %or, ptr %d, align [filtered]
  %main_ret = load i16, ptr %main, align [filtered]
  ret i16 %main_ret
}
