src/codegen/tests/snapshots/rusty__codegen__tests__directaccess_test__qualified_reference_assignment.snap
---
source: src/codegen/tests/directaccess_test.rs
expression: prog
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%myStruct = type { i8 }

define signext i16 @main() {
entry:
  %main = alloca i16, align [filtered]
  %str = alloca %myStruct, align [filtered]
  call void @llvm.memset.p0.i64(ptr align [filtered] %str, i8 0, i64 ptrtoint (ptr getelementptr (%myStruct, ptr null, i32 1) to i64), i1 false)
  store i16 0, ptr %main, align [filtered]
  %x = getelementptr inbounds nuw %myStruct, ptr %str, i32 0, i32 0
  %0 = load i8, ptr %x, align [filtered]
  %erase = and i8 %0, -2
  %or = or i8 %erase, 0
  store i8 %or, ptr %x, align [filtered]
  %x1 = getelementptr inbounds nuw %myStruct, ptr %str, i32 0, i32 0
  %1 = load i8, ptr %x1, align [filtered]
  %erase2 = and i8 %1, -3
  %or3 = or i8 %erase2, 2
  store i8 %or3, ptr %x1, align [filtered]
  %main_ret = load i16, ptr %main, align [filtered]
  ret i16 %main_ret
}

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: write)
declare void @llvm.memset.p0.i64(ptr writeonly captures(none), i8, i64, i1 immarg) #0

attributes #0 = { nocallback nofree nounwind willreturn memory(argmem: write) }
