src/codegen/tests/snapshots/rusty__codegen__tests__directaccess_test__wordaccess_assignment.snap
---
source: src/codegen/tests/directaccess_test.rs
expression: prog
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

define signext i16 @main() {
entry:
  %main = alloca i16, align [filtered]
  %c = alloca i32, align [filtered]
  store i32 0, ptr %c, align [filtered]
  store i16 0, ptr %main, align [filtered]
  %0 = load i32, ptr %c, align [filtered]
  %erase = and i32 %0, -65536
  %or = or i32 %erase, 256
  store i32 %or, ptr %c, align [filtered]
  %main_ret = load i16, ptr %main, align [filtered]
  ret i16 %main_ret
}
